--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #100720;
+  background-color: #06283D;
 }
 
 .container50 {
@@ -26,6 +26,7 @@ body {
   display: flex;
   justify-content: center;
   overflow: hidden;
+  padding-top: 25px;
 }
 .main-box .main-photo img {
   transition: 0.3s ease-in-out;
@@ -46,9 +47,6 @@ body {
   font-size: smaller;
   padding-top: 7px;
 }
-.main-box .main-links {
-  padding: 15px 0;
-}
 .main-box .main-links .links {
   display: flex;
   justify-content: center;
@@ -58,11 +56,11 @@ body {
   background-color: #ffffff;
   border: none;
   transition: 0.3s ease-in-out;
-  padding: 15px 25px;
+  padding: 15px 20px;
 }
 .main-box .main-links .links .myBtn:hover {
   transform: scale(1.2);
-  background-color: #31087B;
+  background-color: #1363DF;
 }
 .main-box .main-links .links .myBtn:hover a {
   color: #ffffff;
@@ -80,29 +78,33 @@ body {
   transition: 0.3s ease-in-out;
 }
 .main-box .main-about {
-  text-align: center;
   padding: 15px 0;
+}
+.main-box .main-about .container40 {
+  width: 85%;
+  margin: auto;
 }
 .main-box .main-about h4 {
   color: #FFC23C;
+  padding-top: 15px;
 }
 .main-box .main-about span {
   color: #fff;
+  font-size: 14px;
 }
 .main-box .main-footer {
   background-color: #31087B;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
   text-align: center;
   margin-top: 20px;
   padding-top: 5px;
-  padding-bottom: 1px;
   color: #fff;
 }
 .main-box .main-footer span,
 .main-box .main-footer p {
-  font-size: 15px;
+  font-size: 12px;
 }
 .main-box .main-footer i {
-  font-weight: 100;
+  font-weight: 80;
 }/*# sourceMappingURL=style.css.map */
